--- a/doc/emacs/glossary.texi
+++ b/doc/emacs/glossary.texi
@@ -193,7 +193,7 @@ press a mouse button and release it without moving the mouse.
 
 @item Clipboard
 A clipboard is a buffer provided by the window system for transferring
-text between applications.  On the X Window system, the clipboard is
+text between applications.  On the X Window System, the clipboard is
 provided in addition to the primary selection (q.v.@:); on MS-Windows and Mac,
 the clipboard is used @emph{instead} of the primary selection.
 @xref{Clipboard}.
