--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-04-14  Juanma Barranquero  <lekktu@gmail.com>
+
+	* emacs-lock.el (emacs-lock-locked-buffer-functions): New hook.
+	(emacs-lock--exit-locked-buffer): Return the locked buffer.  Doc fix.
+	(emacs-lock--kill-emacs-hook, emacs-lock--kill-emacs-query-functions)
+	(emacs-lock--kill-buffer-query-functions): Run new hook.  (Bug#11017)
+
 2012-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* progmodes/which-func.el (which-func-modes): Change default.
