--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,5 +1,8 @@
 2012-04-14  Chong Yidong  <cyd@gnu.org>
 
+	* glossary.texi (Glossary): Standardize on "text terminal"
+	terminology.  All callers changed.
+
 	* misc.texi (emacsclient Options): Document "client frame" concept
 	and its effect on C-x C-c more carefully.
 
