--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,11 @@
+2012-04-14  Michal Nazarewicz  <mina86@mina86.com>
+
+	* server.el (server-auth-key): New variable.
+	(server-generate-key): New function.
+	(server-get-auth-key): New function.
+	(server-start): Use the new variable and functions to allow
+	setting a permanent server key (bug#9423).
+
 2012-04-14  Leo Liu  <sdl.web@gmail.com>
 
 	* vc/diff-mode.el (diff-file-prev/next): Fix typo.
