--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-04-14  Juanma Barranquero  <lekktu@gmail.com>
+
+	* server.el (server-auth-key, server-generate-key): Doc fixes.
+	(server-get-auth-key): Doc fix.  Use `string-match-p'.
+	(server-start): Reflow docstring.
+
 2012-04-14  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* server.el (server-generate-key): `called-interactively-p'
