--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-04-14  Glenn Morris  <rgm@gnu.org>
+
+	* international/mule-cmds.el (set-language-environment): Doc fix.
+
 2012-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	Avoid the use of ((lambda ...) ...) in lexical-binding code.
