More small edits for doc/emacs/mule.texi
* doc/emacs/mule.texi (Language Environments): Move font info to "Fontsets".
(Fontsets): Move intlfonts etc here from "Language Environments".
Copyedits.
(Defining Fontsets, Modifying Fontsets, Undisplayable Characters)
(Unibyte Mode, Charsets, Bidirectional Editing): Copyedits.

* admin/FOR-RELEASE: Related markup.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,11 @@
+2012-04-14  Glenn Morris  <rgm@gnu.org>
+
+	* mule.texi (Language Environments): Move font info to "Fontsets".
+	(Fontsets): Move intlfonts etc here from "Language Environments".
+	Copyedits.
+	(Defining Fontsets, Modifying Fontsets, Undisplayable Characters)
+	(Unibyte Mode, Charsets, Bidirectional Editing): Copyedits.
+
 2012-04-14  Chong Yidong  <cyd@gnu.org>
 
 	* glossary.texi (Glossary): Standardize on "text terminal"
